--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-server.port = 8070
+server.port=8070
 
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
+
+#???? SQL?? ?????? ??
+spring.jpa.show-sql=true
+
+#ddl??? ?? ?? / none, create, update
+spring.jpa.hibernate.ddl-auto=none
